<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.hung_xum.logintest.Activity.Order">

    <EditText
        android:id="@+id/edit_Cid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/hint_cid"/>
    <EditText
        android:id="@+id/edit_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_address"/>
    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/hint_phone"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_pnum1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pnum"
            android:inputType="number"
            android:layout_alignParentRight="true"/>

        <EditText
            android:id="@+id/edit_pname1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pname"
            android:layout_toLeftOf="@id/edit_pnum1"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_pnum2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pnum"
            android:inputType="number"
            android:layout_alignParentRight="true"/>

        <EditText
            android:id="@+id/edit_pname2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pname"
            android:layout_toLeftOf="@id/edit_pnum2"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_pnum3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pnum"
            android:inputType="number"
            android:layout_alignParentRight="true"/>

        <EditText
            android:id="@+id/edit_pname3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pname"
            android:layout_toLeftOf="@id/edit_pnum3"/>

    </RelativeLayout>

    <TextView
        android:gravity="center"
        android:id="@+id/txt_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/hint_price"/>

    <EditText
        android:id="@+id/edit_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/hint_date"/>

    <Button
        android:id="@+id/btn_commit_order"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_order"/>
</LinearLayout>
